chg: openapi refactor and regenerating
