# src/app/rest/model/event-condition-type-dto.ts
@@ -1,0 +1,29 @@
+/**
+ * Registration System API
+ *
+ * 
+ *
+ * NOTE: This class is auto generated by OpenAPI Generator (https://openapi-generator.tech).
+ * https://openapi-generator.tech
+ * Do not edit the class manually.
+ */
+import { EnumerationItemDTO } from './enumeration-item-dto';
+
+
+export interface EventConditionTypeDTO extends EnumerationItemDTO { 
+    conditionOption: EventConditionTypeDTO.ConditionOptionEnum;
+}
+export namespace EventConditionTypeDTO {
+    export const ConditionOptionEnum = {
+        Value: 'VALUE',
+        DateMin: 'DATE_MIN',
+        DateMax: 'DATE_MAX',
+        DateRange: 'DATE_RANGE',
+        NumRange: 'NUM_RANGE',
+        NumMin: 'NUM_MIN',
+        NumMax: 'NUM_MAX'
+    } as const;
+    export type ConditionOptionEnum = typeof ConditionOptionEnum[keyof typeof ConditionOptionEnum];
+}
+
+
