# src/app/rest/model/models.ts
@@ -1,6 +1,8 @@
+export * from './enumeration-dto';
 export * from './enumeration-item-aggregate-dto';
 export * from './enumeration-item-dto';
 export * from './event-condition-dto';
+export * from './event-condition-type-dto';
 export * from './event-dto';
 export * from './event-term-dto';
 export * from './generic-error-dto';
